0.23.3	UNRELEASED

 * Add ``reflog`` command in porcelain. (Jelmer Vernooĳ)

0.23.2	2025-07-07

 * Print deprecations on usage, not import.
   (Alyssa Coghlan, #1650)

 * Add support for ``core.protectHFS`` configuration setting to protect
   against paths that could be misinterpreted on HFS+ filesystems.
   (Jelmer Vernooĳ, #246)

 * Only write Git index extensions when they contain meaningful data.
   Previously, dulwich would write empty extensions to the index file,
   causing unnecessary bloat.
   (Andrew Shadura, Jelmer Vernooĳ, #1643)

 * Document that ``porcelain.push`` returns per-ref status information
   in the ``SendPackResult`` object. Added test coverage to verify this
   functionality works as expected.
   (Jelmer Vernooĳ, #780)

 * Add porcelain submodule commands: ``submodule_update``, ``submodule_add``g
   CLI command, and ``submodule_update`` CLI command. Add ``--recurse-submodules``
   option to ``clone`` command. (#506, Jelmer Vernooĳ)

 * Support popping stashes. (Jelmer Vernooĳ)

 * Add support for parsing Git attributes from .gitattributes files.
   This enables proper handling of text/binary detection, line ending
   normalization, and filter specifications for files.
   (Jelmer Vernooĳ, #1211)

 * Add git bisect functionality including core bisect logic, porcelain
   commands (bisect_start, bisect_bad, bisect_good, bisect_skip,
   bisect_reset, bisect_log, bisect_replay), and CLI support.
   (Jelmer Vernooĳ, #1631)

 * Fix ``porcelain.describe()`` to dynamically determine hash length
   based on uniqueness, matching git describe behavior more closely.
   Previously used a hardcoded 7-character hash length.
   (Jelmer Vernooĳ, #824)

 * Add test for ``porcelain.add()`` to verify files can be added when
   the current working directory is within a gitignored directory.
   (Jelmer Vernooĳ, #550)

 * ParamikoSSHVendor now reads SSH configuration from ~/.ssh/config.
   Host settings including hostname, user, port, and identity file are